--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <!-- Link to the CSS file -->
   <link rel="stylesheet" href="style.css">
 </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MB02J8BYZN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MB02J8BYZN');
+</script>
 <body id="body">
   <!-- Container for the Resume -->
   <div class="container">
