--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <section class="Work">
         <!-- h2 Element for the Section Title -->
         <hr> 
-        <h2><b>Work Experience</b></h2>
+        <h2><b>Work Experience/Side Jobs</b></h2>
         <!-- p Element for the Company Name and Date -->
         <h3><b>Same Day Edit of Birthday and Christening</b> | 2015-2020</h3>
         <h3><b>Hair and Makeup Artist for a Wedding</b> | 2015-2020</h3>
