--- a/index.html
+++ b/index.html
@@ -41,24 +41,17 @@
         <h2><b>Educational Highlights</b></h2>
         <!-- Educational Qualifications -->
         <h3><b>Tertiary Education</b></h3>
-        <p><b>Bachelor of Science in Information Technology</b></p>
-        <p><b>Business Analytics · FEU Institute of Technology</b></p>
-        <p><b>Aug 2022 - Present</b></p>
+        <p>BSITBA · FEU Institute of Technology (2022 - Present)</p>
 
         <h3><b>Secondary Education</b></h3>
-        <p><b>Meycauayan College</b></p>
-        <p><b>Jun 2016 - Jun 2022</b></p>
+        <p>Meycauayan College (2016 - 2022)</p>
 
         <h3><b>Primary Education</b></h3>
-        <p><b>NTY Children's Camp</b></p>
-        <p><b>Jun 2012 - Mar 2016</b></p>
-        
-        <p><b>Calvario Elementary School</b></p>
-        <p><b>Jun 2010 - Mar 2012</b></p>
+        <p>NTY Children's Camp (2012 - 2016)</p>
+        <p>Calvario Elementary School (2010 - 2012)</p>
 
         <h3><b>Preschool</b></h3>
-        <p><b>Calvario Elementary School</b></p>
-        <p><b>Jun 2009 - Mar 2010</b></p>
+        <p>Calvario Elementary School (2009 - 2010)</p>
       </section>
       <!-- Section for the Achievements -->
       <hr> 
@@ -69,19 +62,10 @@
         <h3><b>Dancing Competition Awards</b></h3>
         <p><b>Champion</b> - Issued by Chosen Ground on April 29, 2023</p>
         <p><b>3rd Place</b> - Issued by DS Queens on January 14, 2023</p>
-
         <!-- Academic Honors -->
-        <h3><b>Academic Honors</b></h3>
-        <p><b>With High Honors - Grade 12</b> - Issued by Meycauayan College on June 30, 2022</p>
-        <p><b>With High Honors - Grade 11</b> - Issued by Meycauayan College on July 05, 2021</p>
-        <p><b>With Honors - Grade 7 to Grade 10</b> - Issued by Meycauayan College on August 01, 2020</p>
-
-        <!-- Elementary Achievements -->
-        <h3><b>Elementary Achievements</b></h3>
-        <p><b>Top 3 - Grade 6</b> - Issued by NTY Children's Camp on March 15, 2016</p>
-        <p><b>Top 4 - Grade 5</b> - Issued by NTY Children's Camp on March 15, 2015</p>
-        <p><b>Top 1 - Grade 1</b> - Issued by Calvario Elementary School on March 15, 2011</p>
-        <p><b>Top 4 - Kindergarten</b> - Issued by Calvario Elementary School on March 15, 2010</p>
+        <h3><b>Academic Honors (Highschool)</b></h3>
+        <p><b>With High Honors - Grade 11 & 12</b> - Issued by Meycauayan College (2021 & 2022)</p>
+        <p><b>With Honors - Grade 7 to Grade 10</b> - Issued by Meycauayan College (2017 - 2020)</p>
       </section>
       <!-- Section for Seminars and Trainings -->
       <hr> 
@@ -99,11 +83,30 @@
         <!-- h2 Element for the Section Title -->
         <h2><b>Organizations and Memberships</b></h2>
         <!-- Organization and Membership Details -->
-        <p><b>FEU Tech Freshmen Society</b> - Member · September 30, 2022 - Present</p>
-        <p><b>FEU Tech Artist Connection</b> - Member · September 30, 2022 - Present</p>
-        <p><b>Meycauayan College Varsity Band</b> - Member · June 04, 2018 - August 01, 2020</p>
+        <p><b>Meycauayan College Varsity Band</b> - Member · (2018 - 2020)</p>
+        <p><b>FEU Tech Freshmen Society</b> - Member · (2022 - 2023)</p>
+        <p><b>FEU Tech Artist Connection</b> - Member · (2022 - Present)</p>
+      <hr>
+      </section>
+      <!-- Create a section for the skills -->
+      <section class="Skills">
+        <!-- Use a h2 element for the section title -->
+        <h2>Skill Summary</h2>
+        <!-- Use a ul element for the skills -->
+        <ul class="skills">
+          <li>Microsoft Word</li>
+          <li>Microsoft Excel</li>
+          <li>C++</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+        </ul>
       </section>
     </main>
+  </div>
+  <!-- GIF at the bottom -->
+  <div class="gif-container">
+    <img src="https://i.gifer.com/5zoL.gif" alt="Bottom GIF">
   </div>
   <!-- Button for Switching the Background Color -->
   <button id="switch-button">Switch Background Color</button>
