--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <!-- Create a section for the skills -->
       <section class="Skills">
         <!-- Use a h2 element for the section title -->
-        <h2>Skill Summary</h2>
+        <h2>Skills Summary</h2>
         <!-- Use a ul element for the skills -->
         <ul class="skills">
           <li>Microsoft Word</li>
