--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Channel Kyte P. Oronico Resume</title>
+  <title>TECHNICAL 1</title>
   <!-- Link to the CSS file -->
   <link rel="stylesheet" href="style.css">
   <!-- Google tag (gtag.js) -->
