--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     
       <!-- ul Element for the Contact Information -->
       <ul class="contact">
-        <li><b>Official Address:</b> #21 Bagong Buhay Street Malhacan Meycauayan City Bulacan</li>
-        <li><b>Mobile Number:</b> 09271591627</li>
+        <li><b>Official Address:</b>Meycauayan City Bulacan</li>
+        <li><b>Mobile Number:</b> 09*********</li>
         <li><b>Email Address:</b> ckoronico@gmail.com</li>
         <li><b>Birthdate:</b> January 2, 2004</li>
       </ul>
